# RustLearner

./: Cargo.toml
cli/: Cargo.toml  Readme.md  test.txt
cli/src/: main.rs
cli/tests/: cli.rs
src/: array.rs  enumerations.rs  for_loop.rs  ifs.rs  main.rs  match_state.rs  option_t.rs  sh.rs  struct_type.rs  unions.rs  vectors.rs  while_loop.rs
