[package]
name = "cli"
version = "0.1.0"
authors = ["mbrimmer83 <mbrimmer1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
